--- a/week4.css
+++ b/week4.css
@@ -1,11 +1,33 @@
-p {
-    color: red;
+
+body {
+  background-color: #fff;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1em;
+  margin: 0;
 }
 
-.test-class {
-    color: purple;
+h1 {
+  color: hotpink;
+  font-size: 2em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  border-bottom: 1px solid #375e97;
 }
 
-#test-id {
-    color: green;
+h2 {
+  font-size: 1.5em;
+}
+
+.job-title {
+  color: #999999;
+  font-weight: bold;
+}
+
+a:link,
+a:visited {
+  color: #fb6542;
+}
+
+a:hover {
+  text-decoration: none;
 }
