--- a/week4.css
+++ b/week4.css
@@ -12,6 +12,8 @@ h1 {
   font-size: 2em;
   font-family: Georgia, 'Times New Roman', Times, serif;
   border-bottom: 1px solid #375e97;
+  border-bottom-style: dotted;
+  
 }
 
 h2 {
