--- a/week4.css
+++ b/week4.css
@@ -11,13 +11,19 @@ h1 {
   color: hotpink;
   font-size: 2em;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  border-bottom: 1px solid #375e97;
-  border-bottom-style: dotted;
-  
+  border-bottom: 10px dotted purple;
+
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.5em; 
+  font-style: italic;
+}
+
+ul {
+    background-color: #eeeeee;
+    border: 5px solid purple;
+    padding: 2em;
 }
 
 .job-title {
@@ -31,5 +37,6 @@ a:visited {
 }
 
 a:hover {
-  text-decoration: none;
+  text-decoration: green;
+  color: green;
 }
