--- a/css/wa4.css
+++ b/css/wa4.css
@@ -1,5 +1,7 @@
 /* General styles - put these straight into your stylesheet */
-
+h2, p {
+    margin: 0;
+}
 body {
     margin: 0;
   }
@@ -10,16 +12,9 @@ body {
     background-color: #ccc;
   }
   
-  /* Selectors to be matched up with rulesets */
-  
-  .card article img
-  .card footer
-  .card header
-  .card
-  
   /* Rulesets to be matched up with selectors */
   
-  .card footer{
+  .card{
     width: 35em;
     height: 22em;
     margin: 5em auto;
@@ -28,17 +23,75 @@ body {
     border-radius: 1.5em;
   }
   
-  .card article img{
+  .card header{
     background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
     border-radius: 1.5em 1.5em 0 0;
+    height: 3em;
+    padding: 1em;
+  }
+  
+   .card footer{
+    font-size: 1.5em;
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
+    border-radius: 0 0 1.5em 1.5em;
+    height: 3em;
+    padding: .3em;
   }
   
   .card article img{
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
-    border-radius: 0 0 1.5em 1.5em;
-  }
-  
-  {
-    max-height: 100%
+    max-height: 100%;
     float: right;
   }
+
+  article{
+    height: 12em;
+    background-color: rgba(53, 50, 50, 0.42);
+    color: lightgrey;
+  }
+
+  h2{
+    margin: 0;
+    font-size: 2em;
+    line-height: 1.5em;
+  }
+
+  article p{
+    padding: 1em;
+  }
+
+.card footer p{
+    padding: .5em;
+}
+
+.card2{
+    width: 35em;
+    height: 22em;
+    margin: 5em auto;
+    background-color: rgb(8, 0, 255);
+    border: 0.2em solid black;
+    border-radius: 1.5em;
+  }
+  
+  .card2 header{
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
+    border-radius: 1.5em 1.5em 0 0;
+    height: 3em;
+    padding: 1em;
+  }
+  
+   .card2 footer{
+    font-size: 1.5em;
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
+    border-radius: 0 0 1.5em 1.5em;
+    height: 3em;
+    padding: .3em;
+  }
+  
+  .card2 article img{
+    max-height: 100%;
+    float: right;
+  }
+
+  .card2 footer p{
+    padding: .5em;
+}
