--- a/ica6/ica6-style.css
+++ b/ica6/ica6-style.css
@@ -8,7 +8,7 @@ html {
 
 body {
   margin: 0;
-  background: #9a9898;
+  background: #ffffff;
 }
 
 article {
@@ -18,7 +18,7 @@ article {
   position: relative;
   background-image: url('top-image.png');
   background-repeat: no-repeat;
-  background-color: white;
+  background-color: rgb(228, 226, 226);
   border-top: 1mm solid red;
   border-bottom: 1mm solid red;
 }
@@ -27,7 +27,6 @@ address {
   position: absolute;
   bottom: 8mm;
   right: 20mm;
-  background-image: url('top-image.png');
 }
 
 h1 {
@@ -44,5 +43,3 @@ h1 {
   text-shadow: 1px 1px 1px black;
   background-image: url('logo.png');
 }
-
-/* Your CSS below here */
