--- a/wa/wa6.css
+++ b/wa/wa6.css
@@ -12,14 +12,20 @@
     left: 30px;
 }
 
+.container3 {
+    position: absolute;
+    top: 20px;
+    left: 30px;
+}
+
 .box1, .box2 {
     width: 300px;
-    height: 100px;
+    height: 120px;
     position: absolute;
 }
 
 .box1 {
-    top: 0;
+    top: 10px;
     right: 0;
     border: 10px solid blue;
     border-radius: 1em;
@@ -27,25 +33,38 @@
 }
 
 .box2 {
-    top: 120px;
-    right:0;
+    top: 10px;
+    right:330px;
     border: 10px solid green;
     border-radius: 1em;
     border-top-right-radius: 10% 30%;    
 }
 
-.box3{
-    width: 300px;
-    height: 75;
+.box3 {
+    width: 320px;
+    height: 65;
     position: absolute;
-    border: 10px solid grey;
-    border-radius: 1em;
-    border-top-right-radius: 10% 30%;    
+    border: 10px solid red;
+    border-radius: 2em;
+    border-top-right-radius: 10% 30%;  
+    background-color: red;  
+}
+
+.box4 {
+    width: 420px;
+    height: 65;
+    position: absolute;
+    border: 3px solid red;
+    border-radius: 2em;
+    border-top-right-radius: 10% 30%;  
+    background-color: grey;  
 }
 
 .holder{
     width: 100vw;
-    height: 100vh;
+    height: 130vh;
+    border: 10px solid red;
+    border-radius: 1em;
 }
 
 .holder img {
