--- a/wa7/styles.css
+++ b/wa7/styles.css
@@ -8,6 +8,8 @@ body {
   img {
       max-width: 100%;
       display: block;
+      float: left;
+ 
   }
   
   .logo {
@@ -18,9 +20,11 @@ body {
   }
   
   .grid {
+    display: grid;
+    grid-template-columns: auto auto;
     margin: 0 auto;
     padding: 0 20px;
-    max-width: 980px;
+    grid-gap: 1px;
   }
   
   nav {
@@ -32,6 +36,10 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    text-align: center
   }
   
   nav a {
@@ -43,9 +51,24 @@ body {
   .photos {
     list-style: none;
     margin: 0;
-    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 3r;
+    grid-gap: 1px;
   }
 
   .feature {
       width: 200px;
+  }
+
+  @media only screen and (max-width: 500px) {
+    .grid{
+      display 
+    }
+  }
+
+  @media only screen and (min-width: 499px) {
+    .grid{
+      display 
+    }
   }
