--- a/wa/wa10.css
+++ b/wa/wa10.css
@@ -18,8 +18,8 @@ input[type="text"] {
 }
 
 p {
-  background: #ffc125;
-  color: #5e2612;
-  padding: 10px;
+  background: red;
+  color: white;
+  padding: 20px;
   visibility: hidden;
 }
