--- a/wa/wa11.css
+++ b/wa/wa11.css
@@ -1,17 +1,17 @@
 h1 {
-  font-family: helvetica, arial, sans-serif;
+  font-family:'Times New Roman', Times, serif, sans-serif;
   text-align: center;
 }
 
 body {
-  width: 640px;
+  width: 450px;
   margin: 0 auto;
 }
 
 .full-img {
   position: relative;
-  display: block;
-  width: 640px;
+  display: row;
+  width: 960px;
   height: 480px;
 }
 
@@ -26,18 +26,18 @@ body {
 
 button {
   border: 0;
-  background: rgba(150,150,150,0.6);
-  text-shadow: 1px 1px 1px white;
-  border: 1px solid #999;
+  background: rgba(550,550,550,3.6);
+  text-shadow: 1px 1px 1px black;
+  border: 1px solid red;
   position: absolute;
   cursor: pointer;
-  top: 2px;
-  left: 2px;
+  top: 1px;
+  left: 1px;
 }
 
 .thumb-bar img {
   display: block;
   width: 20%;
-  float: left;
+  float: right;
   cursor: pointer;
 }
