--- a/wa12.css
+++ b/wa12.css
@@ -11,7 +11,7 @@ html {
   }
   
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Times New Roman", Times, serif;
     background-color: maroon;
   }
   
@@ -27,7 +27,7 @@ html {
   }
   
   header {
-    width: 100%;
+    width: 100%; 
     font-size: 30px;
     text-align: center;
     padding: 10px;
