--- a/ica13.css
+++ b/ica13.css
@@ -1,18 +1,18 @@
 html, body {
     margin: 0;
-  }
+}
   
-  html {
+html {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height: 100%;
-  }
+}
   
-  body {
+body {
     overflow: hidden;
     height: inherit;
-  }
+}
   
-  h1 {
+h1 {
     font-size: 2rem;
     letter-spacing: -1px;
     position: absolute;
@@ -20,6 +20,6 @@ html, body {
     top: -4px;
     right: 5px;
   
-    color: transparent;
+    color: white;
     text-shadow: 0 0 4px white;
-  }
+}
