--- a/JS-final/JS.css
+++ b/JS-final/JS.css
@@ -30,10 +30,20 @@ h1 {
     display: flex;
   }
   
-  .input-box {
+.input-box {
     width: 50px;
     height: 50px;
     font-size: 16px;
     margin: 0 5px;
     text-align: center;
   }
+
+.set-button {
+    background-color: yellow;
+    color: pink;
+  }
+  
+.restart-button {
+    background-color: limegreen;
+    color: paleturquoise;
+}
