--- a/JS-final/JS.css
+++ b/JS-final/JS.css
@@ -33,14 +33,14 @@ h1 {
 .input-box {
     width: 50px;
     height: 50px;
-    font-size: 16px;
-    margin: 0 5px;
+    font-size: 24px;
+    margin: 0 7px;
     text-align: center;
   }
 
 .set-button {
     background-color: yellow;
-    color: pink;
+    color: gold;
   }
   
 .restart-button {
